# ChangeLog for profile directory
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.9219 2014/07/16 19:14:43 dilfridge Exp $
#
# This ChangeLog should include records for all changes in profiles directory.
# Only typo fixes which don't affect portage/repoman behaviour could be avoided
# here. If in doubt put a record here!

  16 Jul 2014; Andreas K. Huettel <dilfridge@gentoo.org> package.mask:
  Add 5.20 version of threads to perl-5.20 mask

  16 Jul 2014; Andreas K. Huettel <dilfridge@gentoo.org> package.mask:
  Add 5.20 version of Net::Ping to perl-5.20 mask

  15 Jul 2014; Andreas K. Huettel <dilfridge@gentoo.org> package.mask:
  Add 5.20 version of Locale::Maketext to perl-5.20 mask

  15 Jul 2014; Andreas K. Huettel <dilfridge@gentoo.org> package.mask:
  Add 5.20 version of if to perl-5.20 mask

  15 Jul 2014; Andreas K. Huettel <dilfridge@gentoo.org> package.mask:
  Add 5.20 version of I18N::LangTags to perl-5.20 mask

  15 Jul 2014; Andreas K. Huettel <dilfridge@gentoo.org> package.mask:
  Add 5.20 version of autodie to perl-5.20 mask

  15 Jul 2014; Andreas K. Huettel <dilfridge@gentoo.org> package.mask:
  Add 5.20 version of XSLoader to perl-5.20 mask

  15 Jul 2014; Andreas K. Huettel <dilfridge@gentoo.org> package.mask:
  Add 5.20 version of Time::Piece to perl-5.20 mask

  15 Jul 2014; Andreas K. Huettel <dilfridge@gentoo.org> package.mask:
  Add 5.20 version of Thread::Queue to perl-5.20 mask

  15 Jul 2014; Ulrich Müller <ulm@gentoo.org> package.mask:
  Mask sys-libs/lib-compat and its reverse dependencies.

  15 Jul 2014; Anthony G. Basile <blueness@gentoo.org> profiles.desc:
  Add hardened/linux/uclibc/ppc to profiles.desc

  15 Jul 2014; Anthony G. Basile <blueness@gentoo.org>
  arch/amd64-fbsd/todo/package.use.mask, arch/amd64/package.use.mask,
  arch/x86/package.use.mask, base/package.use.mask,
  default/bsd/fbsd/amd64/9.1/clang/package.use.mask,