@@ -1,0 +1,12 @@
+DEFINED_PHASES=config install postinst postrm preinst setup
+DESCRIPTION=Folding@Home is a distributed computing project for protein folding.
+EAPI=4
+HOMEPAGE=http://folding.stanford.edu/FAQ-SMP.html
+KEYWORDS=~amd64 ~x86
+LICENSE=FAH-EULA-2014 FAH-special-permission
+RDEPEND=app-arch/bzip2 sys-devel/gcc sys-libs/glibc sys-libs/zlib
+RESTRICT=mirror bindist strip
+SLOT=0
+SRC_URI=x86? ( https://fah.stanford.edu/file-releases/public/release/fahclient/centos-5.5-32bit/v7.4/fahclient_7.4.4-32bit-release.tar.bz2 ) amd64? ( https://fah.stanford.edu/file-releases/public/release/fahclient/centos-5.3-64bit/v7.4/fahclient_7.4.4-64bit-release.tar.bz2 )
+_eclasses_=eutils	06133990e861be0fe60c2b428fd025d9	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0f1760274637a138b99bb649202ea402	user	f54e098dd38ba1c0847a13e685b87747	versionator	cd0bcdb170807e4a1984115e9d53a26f
+_md5_=3f3d596726292353d5f116f9633b710e
