@@ -6,13 +6,16 @@ AUX 7.3/folding-conf.d 339 SHA256 016af8d64434d3a13d336055347dcae8e486dedbcfe66d
 AUX 7.3/initfolding 129 SHA256 465c32ae600ffc4018712e9c987223c37236fe669e20a7d1c77e8d9608893cae SHA512 bf8f5dcbeacb1e950a9410183a33a24647a72029f4d5549096cadbc79b32ed6747b6c0f3b72a6d26c3d9f3581a9dbb04572ca049481ea7432c024c3dfad6ad47 WHIRLPOOL 4b1422d719dacedfde68cf49f0b5d7b1d07bc2f772af72581698a9ec6aa418639b1095de6b2cafe35120b63fdf7d55bc14c32131e44475a8af11a78837b56f65
 DIST fahclient_7.3.6-32bit-release.tar.bz2 4014455 SHA256 c8415aa5a64d6b26e7684327d51f9133d524777d4123ea47138ba86595c37f12 SHA512 0a49e9cb26659357b4855f5aaf7ef5c078f172af16777d74fb566e7faa61ac0e41185dcd6f06841bf4efe047017e8dc783eae7682a40b921acb436e4d81e6639 WHIRLPOOL 0cd8f0b6dcfce297cb70b307887f1d44278c07435f5a067d9f1e83399b3913710d481982033023faf1b9056b63f14eca3b53babe698633de24544c6cdbce5f82
 DIST fahclient_7.3.6-64bit-release.tar.bz2 4349503 SHA256 e3d48b0d1b64da96601f741e0b9164ea633f1be3fe4407086679bc7c72742079 SHA512 9995a72549e38724830c403eef188786b137c8669b6121c0ec6c3d29539db9b0f67876adf5c3af64c818ada05f57a0f2ea88a58b73bdfd852c1ed8f09a327583 WHIRLPOOL 4e5bccb175dc042a1380c06b96a5d803f36ede50e429d3b1f13b33c872f753bda5acd7f5a3d60a522cb82c7da47313ef95e0c55778cbe94d579a9ecaa22c49cc
+DIST fahclient_7.4.4-32bit-release.tar.bz2 4313096 SHA256 81f1a1d161d1302a08638f23ebcfd7a163046a5427c49c70651fc8e2f6d8d60e SHA512 6a660b99c97c83518863ef671ae760b15e3ca33cacfde6485c11b29e98fab15a9d27833ba307c95b39e6ffb7f271cd0c7a47060ec5b8614961e9a5ee46494b3f WHIRLPOOL 6c6c25446e8e118b7931c58643827739691bcb9f1ae67461e6dd72cfc8556f86d49c533669897f6711537ce920680c23d0d496ba75a21047a88708cc93fec314
+DIST fahclient_7.4.4-64bit-release.tar.bz2 4451080 SHA256 4642ed9b5a06c8ab63106293f6a5ce547f6a96efe85fcd3b8c19d9065ab582df SHA512 40fc93c4ec682342040a4c7a9fd92dc9d1727ef60af6d3fa3191575719c7e595868f289727561f6902f8374061f7b51dfcf565ac047706336ef4ae9a589ff9a8 WHIRLPOOL 4feea83f1e826430943dec0495ce7658408cdaa4671bf1e4d1ec338991dbeb1599f25a4835f3960bea135fe4af7c4e415be6767ea5a0a13f63201c64e6ce6f6e
 EBUILD foldingathome-7.3.6-r2.ebuild 2519 SHA256 b398db057487c57ea972afcecf670c3d2d148d0617a0b1bb6e27d5c01ca70a09 SHA512 39f59f1c309291e3a1b07e9dd5ca225949b214e70a28ac3c2cc042f051cc76710fe634006dffebcfb7d417beb705c3ce0a87b5c9f4b25767e7ac1fc66671d0a0 WHIRLPOOL 9e6eb636016056d8f6244cd25e4587ede81bd4cf9905df008780dd3b24385c956c5c9ac24fbd0f107f794f0f517ac139f34189e6e545bb6d6d45675b81227a42
-MISC ChangeLog 12261 SHA256 f14ba1a667c5e214517c114214b86f5ac24a629624a5f94f5bd1a8b3cb68342b SHA512 3aba5f12a10115ae727e906f28b11c6858721395c902b549b946de449cac1365280c13da54e4e9c8693342a0cbd38748cd5122776734c16e898a9ebb328d4714 WHIRLPOOL 748b13175088438e1d977b7bc53d15eb0cafddfe516b7e00968af800896606f2cc55b28510d2c1a3390be75bd10473ec0db448e4c1c55d8771e487a5ba7a15ad
+EBUILD foldingathome-7.4.4.ebuild 2437 SHA256 41ef7e7dda6aebf33b8f2ecf5ca70470b34f4252a4837390c54ed8d689e77a88 SHA512 9c1069ef52acca0f5ea7e31076ec3273eba358a9e463af20bf6471a3016f333cfdf9b2923765c65c45da7ff94e2e48c7ba89468526835803b5ea0164b4b702cd WHIRLPOOL 5092684ef1d3c63d924112edc8b7d33e8fde4f8833bf57b922d0a8fa9e4493d747813d523dfa4b88504a3d2630051671c6955d80e901791af830425328afd07b
+MISC ChangeLog 12444 SHA256 0201fe20d2afdab6041174adb710f3319681e029669444c2010462f2f97db8f9 SHA512 e3b865b137fadd5a68662389c3075c9154c31cb37e749656743479a2611bea340143f2d350c7dcbb5dfb5afa4e50ebea4aed1d27ab28c74c332bb43a63e5035d WHIRLPOOL 339651f0b5538515de2ba7fb44469e91eb6ba6ebae87eef8dce08c2b33ede85d602fa3ad53b1089ef36c3c40ac23d4ea767a2edab038a375d53752eaf8921271
 MISC metadata.xml 253 SHA256 6a51e4813e2cce1386254c0dd18974193884777c11442a7efe539a010af5a801 SHA512 26c02f86e34a8431f2721da8a709dfe711cbd8fc14eb0dabe8795a3b39a4bae8953c520bee227d59655dffc1c0e400529b90966720dde56edf8f2314cafdf971 WHIRLPOOL 00a0727f1aa2ae756501c9f3407bca7db77f5f2ce1118d6dcd8a5deba86fc417ffe3924d74439567b908034bf3fec971c8dfa96b9ed360f700a94665afd6a438
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iF4EAREIAAYFAlGRGR4ACgkQ2ugaI38ACPB03gD+MdNvzqyjWw86rA7priCC9KVq
-7rG0hCBhrBNQbbTEXA0A/RuKZ+p9mTGvluRaESP0j/wdCQbpffvgsWj246w1rVPo
-=IZeb
+iF4EAREIAAYFAlPG728ACgkQ2ugaI38ACPANvgEAgCurFYBZlWaiZkD2osBVgwiC
+AUe5JaQFI71C2XOuGFcA/1xpyfD7VHhB9hoWO6kw3hgfM9v32Kxt0E/8WvruLr4/
+=ZjqV
 -----END PGP SIGNATURE-----
