@@ -1,6 +1,12 @@
 # ChangeLog for sci-biology/foldingathome
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-biology/foldingathome/ChangeLog,v 1.42 2013/05/13 16:47:20 axs Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sci-biology/foldingathome/ChangeLog,v 1.43 2014/07/16 21:32:34 axs Exp $
+
+*foldingathome-7.4.4 (16 Jul 2014)
+
+  16 Jul 2014; Ian Stakenvicius (_AxS_) <axs@gentoo.org>
+  +foldingathome-7.4.4.ebuild:
+  version bump; license changed, is slightly more lax now
 
   13 May 2013; Ian Stakenvicius <axs@gentoo.org> foldingathome-7.3.6-r2.ebuild:
   showing special permission during pkg_setup so that we 'display this notice.'
